@@ -1,4 +1,4 @@
-architecture.html
+README.md
 debian/README.Devel
 doc/dependencies.png
 systemd/README.systemd
